WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76419
AssociatedURLLoader doesn't support Access-Control-Expose-Header field in response.
https://bugs.webkit.org/show_bug.cgi?id=76419
Summary
AssociatedURLLoader doesn't support Access-Control-Expose-Header field in res...
Bill Budge
Reported
2012-01-16 19:20:07 PST
AssociatedURLLoader filters all non-whitelisted HTTP response headers when using CORS access control. Add support for the HTTP response header Access-Control-Expose-Header.
Attachments
Proposed Patch
(10.91 KB, patch)
2012-01-16 19:29 PST
,
Bill Budge
no flags
Details
Formatted Diff
Diff
Proposed Patch
(10.91 KB, patch)
2012-01-16 21:58 PST
,
Bill Budge
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Bill Budge
Comment 1
2012-01-16 19:29:06 PST
Created
attachment 122704
[details]
Proposed Patch
WebKit Review Bot
Comment 2
2012-01-16 19:31:13 PST
Attachment 122704
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/chromium/ChangeLog', u'Sourc..." exit_code: 1 Source/WebKit/chromium/tests/AssociatedURLLoaderTest.cpp:43: wtf includes should be <wtf/file.h> instead of "wtf/file.h". [build/include] [4] Source/WebKit/chromium/src/AssociatedURLLoader.cpp:107: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Bill Budge
Comment 3
2012-01-16 21:58:38 PST
Created
attachment 122713
[details]
Proposed Patch
Adam Barth
Comment 4
2012-01-17 01:18:22 PST
Comment on
attachment 122713
[details]
Proposed Patch It's unfortunate that we need to duplicate this logic from XMLHttpRequest. It feels like we're missing some common piece of infrastructure that the two could shard.
WebKit Review Bot
Comment 5
2012-01-17 02:26:46 PST
Comment on
attachment 122713
[details]
Proposed Patch Clearing flags on attachment: 122713 Committed
r105134
: <
http://trac.webkit.org/changeset/105134
>
WebKit Review Bot
Comment 6
2012-01-17 02:26:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug