AssociatedURLLoader adds support for the HTTP response header Access-Control-Expose-Header. https://bugs.webkit.org/show_bug.cgi?id=76419

Reviewed by Adam Barth.

* src/AssociatedURLLoader.cpp:
(WebKit::AssociatedURLLoader::ClientAdapter::didReceiveResponse):
* tests/AssociatedURLLoaderTest.cpp:
(WebKit::AssociatedURLLoaderTest::CheckAccessControlHeaders):
(WebKit::TEST_F):


Canonical link: https://commits.webkit.org/93247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105134 268f45cc-cd09-0410-ab3c-d52691b4dbfc